# kdt

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflow/: release.yml
.github/workflows/: release.yml
packaging/: build-all.sh  build-deb.sh  build-rpm.sh  common.sh
src/: ai.rs  cli.rs  clip.rs  config.rs  configmaps.rs  diagnostic.rs  enrich.rs  events.rs  extract.rs  flux.rs  lang.rs  main.rs  pdf.rs  pods.rs  rbac.rs  secrets.rs  svc.rs  ui.rs  vulnerabilities.rs
